welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: ';' expected but integer literal found.
    else { if (b-a)>0 {return a}
                    ^